Fix notifications position on mobile

--- a/app/assets/stylesheets/content/_notifications_mobile.sass
+++ b/app/assets/stylesheets/content/_notifications_mobile.sass
@@ -34,3 +34,4 @@
     margin: 0 !important
     right: 20px !important
     width: calc(100% - 40px) !important
+    top: 70px
